# quorum-mcp

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  PROVIDER_RESEARCH.md  README.md  agile-structure.md  config.yaml.template  pyproject.toml  quorum-mcp-plan.md  requirements.txt  worklog.md
docs/: 404.html  FRONTEND_DESIGN.md  Gemfile  _config.yml  api.md  architecture.md  configuration.md  contributing.md  examples.md  getting-started.md  index.html  robots.txt  session_management.md
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: default.html  page.html
docs/assets/css/: main.css
docs/assets/js/: main.js
docs/providers/: anthropic.md  cohere.md  gemini.md  index.md  mistral.md  novita.md  ollama.md  openai.md
docs/quickstart/: WEB_DASHBOARD.md
examples/: __init__.py  end_to_end_demo.py  local_llm_demo.py  session_demo.py  three_provider_demo.py
k8s/: README.md  configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml.template  service.yaml
src/quorum_mcp/: __init__.py  benchmark.py  budget.py  orchestrator.py  rate_limiter.py  server.py  session.py  web_server.py
src/quorum_mcp/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  gemini_provider.py  mistral_provider.py  novita_provider.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py
src/quorum_mcp/web/: app.py
src/quorum_mcp/web/static/: app.js  index.html
static/: dashboard.html
static/css/: dashboard.css
static/js/: dashboard.js
tests/: __init__.py  test_anthropic_provider.py  test_gemini_provider.py  test_health_monitoring.py  test_integration.py  test_mistral_provider.py  test_ollama_provider.py  test_openai_compatible_provider.py  test_openai_provider.py  test_orchestrator.py  test_session.py
